fixed the toolbar on the profile customization page on mobile devices

--- a/yb_customize/static/css/customization/yb_customization.css
+++ b/yb_customize/static/css/customization/yb_customization.css
@@ -954,7 +954,6 @@
         grid-gap: 3px;
         padding-left: 5px;
         padding-right: 5px;
-        border-left: 1px solid gray;
         grid-row: 2;
         border-right: 1px solid gray;
         /* border-top: 1px solid gray; */
